--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ boto3 = "^1.35.41"
 openpyxl = "^3.1.5"
 xlrd = "^2.0.1"
 pyarrow = "^17.0.0"
+chardet = "^5.2.0"
 
 [tool.poetry.scripts]
 redshift-loader = "redshift_loader.cli:main"
